add tests for all contexts

--- a/test.html
+++ b/test.html
@@ -10,6 +10,10 @@
 <body>
   <script src="test.js"></script>
   <button onclick="testWebTransport()">Start WebTransport</button>
+  <button onclick="testBoardMessage()">Test Board</button>
+  <button onclick="testActiveMemberMessage()">Test Active Member</button>
+  <button onclick="testElementMessage()">Test Element</button>
+  <button onclick="testClientMessage()">Test Client</button>
 </body>
 
 </html>
