add correct certificate

--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 
   <body>
     <script src="test.js"></script>
+    <button onclick="testWebTransportWithDomain()">Start WebTransport</button>
     <button onclick="testWebTransport()">Start WebTransport</button>
     <button onclick="testBoardMessage()">Test Board</button>
     <button onclick="testActiveMemberMessage()">Test Active Member</button>
